--- a/msn-kaydol-msn-kur.html
+++ b/msn-kaydol-msn-kur.html
@@ -39,4 +39,4 @@ Son zamanlarda hala bazı kişiler bu şekilde aramalar yapıyor. Çünkü ülke
 <a href="http://www.mailhesabiac.com/gmail-hesabi-ac.html"><li>Gmail Hesabı Aç</li></a>
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
-</ul></div></main><footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a> <div style="display:none"><a href="http://epostakur.club">E Posta Kur</a></div></span></footer></body></html>
+</ul></div></main><footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a> </span></footer></body></html>
