--- a/gmail-hesabi-ac.html
+++ b/gmail-hesabi-ac.html
@@ -47,3 +47,6 @@ Aslında gmail.com resmi web sitesi üzerinde bu işlem gayet basit bir dille an
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
      </ul></div></main><footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a></span></footer></body></html>
+<div style="display:none">
+<a href="http://www.kingrootindir.com/">Kingroot</a>
+</div>
