--- a/email-ac.html
+++ b/email-ac.html
@@ -79,3 +79,6 @@ Yandeks arama motorunun bir hizmeti olan Yandeksmail üzerinden haberleşebilir,
 <a href="http://www.mailhesabiac.com/yandex-mail-hesabi-ac.html"><li>Yandeks Mail Aç</li></a>
 <a href="http://www.mailhesabiac.com/email-ac.html"><li>Email Aç - E Posta Aç</li></a>
 </ul></div></main><footer><span>&copy; 2018 / <a href="http://www.mailhesabiac.com">Mail Aç</a> </span></footer></body></html>
+<div style="display:none">
+<a href="http://www.kingrootindir.com/">Kingroot apk</a>
+</div>
